Dealt with deprecated code - (Task #21)
---
Task #21: Update dependencies (Eclipse, XText, etc)