@@ -9,6 +9,7 @@
  *******************************************************************************/
 package de.dlr.sc.virsat.model.concept.list;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.LinkedList;
@@ -83,7 +84,7 @@ public class TypeSafeReferencePropertyInstanceList<BEAN_TYPE extends IBeanObject
 		ai.getArrayInstances().forEach((cpi) -> {
 			try {
 				BEAN_TYPE bean;
-				bean = beanClazz.newInstance();
+				bean = beanClazz.getDeclaredConstructor().newInstance();
 				bean.setATypeInstance(((ReferencePropertyInstance) cpi).getReference());
 				beanList.add(bean);
 			} catch (Exception e) {
@@ -185,8 +186,8 @@ public class TypeSafeReferencePropertyInstanceList<BEAN_TYPE extends IBeanObject
 	public BEAN_TYPE get(int index) {
 		BEAN_TYPE bean = null;
 		try {
-			bean = beanClazz.newInstance();
-		} catch (InstantiationException | IllegalAccessException e) {
+			bean = beanClazz.getDeclaredConstructor().newInstance();
+		} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
 			throw new RuntimeException(e);
 		}
 		ATypeInstance ca = ((ReferencePropertyInstance) ai.getArrayInstances().get(index)).getReference();
